Got example game build set up.

--- a/example/CMakeLists.txt
+++ b/example/CMakeLists.txt
@@ -1,28 +1,41 @@
-cmake_minimum_required(VERSION 3.25)
+cmake_minimum_required(VERSION 3.25 FATAL_ERROR)
 
 SET(PROJECTNAME celebrimbor)
+
+SET(ROOT_DIR ..)
 
 PROJECT(${PROJECTNAME})
 
 # Add .lib files
-LINK_DIRECTORIES(${CMAKE_SOURCE_DIR}/lib)
+LINK_DIRECTORIES(${CMAKE_SOURCE_DIR}/${ROOT_DIR}/lib)
 
-FILE(GLOB_RECURSE PROJECT_SOURCES ../lib/*.cpp)
+# FILE(GLOB_RECURSE EXAMPLE_SOURCES ${CMAKE_SOURCE_DIR}/*.cpp)
+FILE(GLOB_RECURSE PROJECT_SOURCES ${CMAKE_SOURCE_DIR}/${ROOT_DIR}/lib/*.cpp)
 
-FILE(GLOB_RECURSE PROJECT_HEADERS ../include/*.h)
+FILE(GLOB_RECURSE PROJECT_HEADERS ${CMAKE_SOURCE_DIR}/${ROOT_DIR}/include/*.h)
 
-ADD_EXECUTABLE(${PROJECTNAME} ${PROJECT_HEADERS} ${PROJECT_SOURCES})
+ADD_EXECUTABLE(${PROJECTNAME} ${CMAKE_SOURCE_DIR}/main.cpp ${PROJECT_HEADERS} ${PROJECT_SOURCES})
+
+# We need a CMAKE_DIR with some code to find external dependencies
+SET(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} ${CMAKE_SOURCE_DIR}/${ROOT_DIR}/cmake/)
 
 # OpenGL
+SET(OpenGL_GL_PREFERENCE GLVND)
 FIND_PACKAGE(OpenGL REQUIRED)
 
-# GLFW
-find_package(GLFW3 REQUIRED)
-message(STATUS "Found GLFW3 in ${GLFW3_INCLUDE_DIR}")
+# GLM
+FIND_PACKAGE(GLM REQUIRED)
+MESSAGE(STATUS "GLM included at ${GLM_INCLUDE_DIR}")
 
-SET(LIBRARIES ${LIBRARIES} ${GLFW3_LIBRARY} ${OPENGL_LIBRARY})
+# GLFW3
+FIND_PACKAGE(GLFW3 REQUIRED)
+MESSAGE(STATUS "Found GLFW3 in ${GLFW3_INCLUDE_DIR}")
 
-INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/../include)
+# # GLAD
+# add_library(GLAD "../third-party/glad.c")
+SET(LIBRARIES ${LIBRARIES} ${GLFW3_LIBRARY} ${OPENGL_LIBRARY} ${CMAKE_DL_LIBS})
+
+INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/${ROOT_DIR}/include /usr/include/GLFW /usr/include/glm)
 
 TARGET_LINK_LIBRARIES(${PROJECTNAME} ${LIBRARIES})
 
