Created src directory for example game

--- a/example/CMakeLists.txt
+++ b/example/CMakeLists.txt
@@ -9,12 +9,13 @@ PROJECT(${PROJECTNAME})
 # Add .lib files
 LINK_DIRECTORIES(${CMAKE_SOURCE_DIR}/${ROOT_DIR}/lib)
 
-# FILE(GLOB_RECURSE EXAMPLE_SOURCES ${CMAKE_SOURCE_DIR}/*.cpp)
+FILE(GLOB_RECURSE EXAMPLE_SOURCES ${CMAKE_SOURCE_DIR}/src/*.cpp)
+
 FILE(GLOB_RECURSE PROJECT_SOURCES ${CMAKE_SOURCE_DIR}/${ROOT_DIR}/lib/*.cpp)
 
 FILE(GLOB_RECURSE PROJECT_HEADERS ${CMAKE_SOURCE_DIR}/${ROOT_DIR}/include/*.h)
 
-ADD_EXECUTABLE(${PROJECTNAME} ${CMAKE_SOURCE_DIR}/main.cpp ${PROJECT_HEADERS} ${PROJECT_SOURCES})
+ADD_EXECUTABLE(${PROJECTNAME} ${EXAMPLE_SOURCES} ${PROJECT_HEADERS} ${PROJECT_SOURCES})
 
 # We need a CMAKE_DIR with some code to find external dependencies
 SET(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} ${CMAKE_SOURCE_DIR}/${ROOT_DIR}/cmake/)
