Got working rendering pipeline, added glad, fixed assetpool.

--- a/example/CMakeLists.txt
+++ b/example/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.25 FATAL_ERROR)
 
-SET(PROJECTNAME celebrimbor)
+SET(PROJECTNAME Celebrimbor)
 
 SET(ROOT_DIR ..)
 
@@ -15,7 +15,11 @@ FILE(GLOB_RECURSE PROJECT_SOURCES ${CMAKE_SOURCE_DIR}/${ROOT_DIR}/lib/*.cpp)
 
 FILE(GLOB_RECURSE PROJECT_HEADERS ${CMAKE_SOURCE_DIR}/${ROOT_DIR}/include/*.h)
 
-ADD_EXECUTABLE(${PROJECTNAME} ${EXAMPLE_SOURCES} ${PROJECT_HEADERS} ${PROJECT_SOURCES})
+FILE(GLOB_RECURSE THIRD_PARTY_SOURCES ${CMAKE_SOURCE_DIR}/${ROOT_DIR}/third-party/lib/*.c)
+
+FILE(GLOB_RECURSE THIRD_PARTY_HEADERS ${CMAKE_SOURCE_DIR}/${ROOT_DIR}/third-party/include/*.h)
+
+ADD_EXECUTABLE(${PROJECTNAME} ${EXAMPLE_SOURCES} ${PROJECT_HEADERS} ${PROJECT_SOURCES} ${THIRD_PARTY_HEADERS} ${THIRD_PARTY_SOURCES})
 
 # We need a CMAKE_DIR with some code to find external dependencies
 SET(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} ${CMAKE_SOURCE_DIR}/${ROOT_DIR}/cmake/)
@@ -32,11 +36,19 @@ MESSAGE(STATUS "GLM included at ${GLM_INCLUDE_DIR}")
 FIND_PACKAGE(GLFW3 REQUIRED)
 MESSAGE(STATUS "Found GLFW3 in ${GLFW3_INCLUDE_DIR}")
 
-# # GLAD
-# add_library(GLAD "../third-party/glad.c")
-SET(LIBRARIES ${LIBRARIES} ${GLFW3_LIBRARY} ${OPENGL_LIBRARY} ${CMAKE_DL_LIBS})
+# GLAD
+ADD_LIBRARY(GLAD ${CMAKE_SOURCE_DIR}/${ROOT_DIR}/third-party/lib/glad/gl.c)
 
-INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/${ROOT_DIR}/include /usr/include/GLFW /usr/include/glm)
+SET(LIBRARIES ${LIBRARIES} ${GLFW3_LIBRARY} GLAD ${OPENGL_LIBRARY} ${CMAKE_DL_LIBS})
+
+INCLUDE_DIRECTORIES(
+    ${CMAKE_SOURCE_DIR}/${ROOT_DIR}/include
+    ${CMAKE_SOURCE_DIR}/${ROOT_DIR}/third-party/include/glad/
+    ${CMAKE_SOURCE_DIR}/${ROOT_DIR}/third-party/include/khr/
+    ${CMAKE_SOURCE_DIR}/${ROOT_DIR}/third-party/include/lin-math/
+    /usr/include/GLFW
+    /usr/include/glm
+)
 
 TARGET_LINK_LIBRARIES(${PROJECTNAME} ${LIBRARIES})
 
