--- a/.github/workflows/example-linux-ci.yml
+++ b/.github/workflows/example-linux-ci.yml
@@ -18,7 +18,7 @@ jobs:
             - name: Pull OpenGL Dependencies
               run: |
                 sudo apt update
-                sudo apt install libglfw3-dev libglm-dev
+                sudo apt install cmake libglfw3-dev libglm-dev
             - name: Create Makefile
               run: |
                 cd ./example
