--- a/.github/workflows/example-linux-ci.yml
+++ b/.github/workflows/example-linux-ci.yml
@@ -8,7 +8,7 @@ on:
 
 jobs:
     build-linux:
-        name: Linux (Clang)
+        name: Linux
         runs-on: "ubuntu-latest"
         steps:
             - uses: actions/checkout@v4
