--- a/example/CMakeLists.txt
+++ b/example/CMakeLists.txt
@@ -13,7 +13,7 @@ FILE(GLOB_RECURSE EXAMPLE_SOURCES ${CMAKE_SOURCE_DIR}/src/*.cpp)
 
 FILE(GLOB_RECURSE PROJECT_SOURCES ${CMAKE_SOURCE_DIR}/${ROOT_DIR}/lib/*.cpp)
 
-FILE(GLOB_RECURSE PROJECT_HEADERS ${CMAKE_SOURCE_DIR}/${ROOT_DIR}/include/*.h)
+FILE(GLOB_RECURSE PROJECT_HEADERS ${CMAKE_SOURCE_DIR}/${ROOT_DIR}/include/*.hpp)
 
 FILE(GLOB_RECURSE THIRD_PARTY_SOURCES ${CMAKE_SOURCE_DIR}/${ROOT_DIR}/third-party/lib/*.c)
 
