Made log level a preprocessor flag.

--- a/example/CMakeLists.txt
+++ b/example/CMakeLists.txt
@@ -53,4 +53,4 @@ INCLUDE_DIRECTORIES(
 
 TARGET_LINK_LIBRARIES(${PROJECTNAME} ${LIBRARIES})
 
-TARGET_COMPILE_OPTIONS(${PROJECTNAME} PUBLIC -std=c++20 -Wall -g)
+TARGET_COMPILE_OPTIONS(${PROJECTNAME} PUBLIC -std=c++20 -Wall -g -DEREGION_LOG_LEVEL=DEBUG)
