Updated CPACK packaging cmake script.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,43 +2,96 @@ cmake_minimum_required(VERSION 3.25)
 
 SET(PROJECT_NAME eregion)
 
-SET(BIN_DIR bin)
-
-SET(OUT_DIR ./out)
-
 PROJECT(${PROJECT_NAME})
 
-# ## File Retrieival
-FILE(GLOB_RECURSE sources ./lib/*.cpp ./include/*.h)
+# Set C++ Standard
+SET(CMAKE_CXX_STANDARD 20)
+SET(CMAKE_CXX_STANDARD_REQUIRED ON)
 
-# ## Target Definitions
-# add_executable(${PROJECT_NAME} ${sources})
+# Set Output Directory
+SET(OUT_DIR out)
+SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/${OUT_DIR}/bin)
+SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/${OUT_DIR}/lib)
+SET(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/${OUT_DIR}/lib)
 
-# TARGET_COMPILE_OPTIONS(${PROJECT_NAME} PUBLIC -std=c++14 -Wall -g -lX11 -lGLEW -lglfw -framework OpenGL)
-# TARGET_INCLUDE_DIRECTORIES(${PROJECT_NAME} PUBLIC include/ /usr/local/include)
+set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_DEBUG ${CMAKE_SOURCE_DIR}/${OUT_DIR}/bin/Debug)
+set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE ${CMAKE_SOURCE_DIR}/${OUT_DIR}/bin/Release)
+set(CMAKE_LIBRARY_OUTPUT_DIRECTORY_DEBUG ${CMAKE_SOURCE_DIR}/${OUT_DIR}/lib/Debug)
+set(CMAKE_LIBRARY_OUTPUT_DIRECTORY_RELEASE ${CMAKE_SOURCE_DIR}/${OUT_DIR}/lib/Release)
+set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_DEBUG ${CMAKE_SOURCE_DIR}/${OUT_DIR}/lib/Debug)
+set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_RELEASE ${CMAKE_SOURCE_DIR}/${OUT_DIR}/lib/Release)
 
-# ## Dependencies
+# Import CMake Scripts
+SET(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} ${CMAKE_SOURCE_DIR}/cmake/)
 
-# X11
-
-# OpenGL
+# External libraries
 FIND_PACKAGE(OpenGL REQUIRED)
+FIND_PACKAGE(GLM REQUIRED)
+FIND_PACKAGE(GLFW3 REQUIRED)
 
-if(NOT OPENGL_FOUND)
-    message(ERROR "OpenGL not found!")
-endif(NOT OPENGL_FOUND)
+# GLAD (Bundled)
+ADD_LIBRARY(GLAD ${CMAKE_SOURCE_DIR}/third-party/lib/glad/gl.c)
+
+INCLUDE_DIRECTORIES(
+    ${CMAKE_SOURCE_DIR}/${ROOT_DIR}/include
+    ${CMAKE_SOURCE_DIR}/${ROOT_DIR}/third-party/include/glad/
+    ${CMAKE_SOURCE_DIR}/${ROOT_DIR}/third-party/include/khr/
+    ${CMAKE_SOURCE_DIR}/${ROOT_DIR}/third-party/include/glm/
+    ${CMAKE_SOURCE_DIR}/${ROOT_DIR}/third-party/include/lin-math/
+    ${CMAKE_SOURCE_DIR}/${ROOT_DIR}/third-party/include/stb_image/
+    /usr/include/GLFW
+)
+
+# File Retrieival
+LINK_DIRECTORIES(${CMAKE_SOURCE_DIR}/lib)
+FILE(GLOB_RECURSE PROJECT_SOURCES ${CMAKE_SOURCE_DIR}/lib/*.cpp)
+FILE(GLOB_RECURSE PROJECT_HEADERS ${CMAKE_SOURCE_DIR}/include/*.hpp)
+FILE(GLOB_RECURSE THIRD_PARTY_SOURCES ${CMAKE_SOURCE_DIR}/third-party/lib/*.c)
+FILE(GLOB_RECURSE THIRD_PARTY_HEADERS ${CMAKE_SOURCE_DIR}/third-party/include/*.h)
+
+# Add Include Directories
+ADD_LIBRARY(${PROJECT_NAME} SHARED ${PROJECT_SOURCES} ${THIRD_PARTY_SOURCES})
+
+TARGET_INCLUDE_DIRECTORIES(${PROJECT_NAME} PUBLIC ${GLFW3_LIBRARY} GLAD ${OPENGL_LIBRARY} ${CMAKE_DL_LIBS})
 
 SET(LIBRARIES ${LIBRARIES} ${OPENGL_LIBRARIES})
 
-INCLUDE_DIRECTORIES(${OPENGL_INCLUDE_DIR})
+# Install
+INSTALL(TARGETS ${PROJECT_NAME}
+    LIBRARY DESTINATION lib
+    ARCHIVE DESTINATION lib)
 
-# ## Packaging
-SET(CPACK_PACKAGE_DIRECTORY ${OUT_DIR})
+INSTALL(DIRECTORY ${CMAKE_SOURCE_DIR}/include/
+    DESTINATION include
+    FILES_MATCHING PATTERN "*.hpp")
 
-# INSTALL(TARGETS ${PROJECT_NAME} DESTINATION ${BIN_DIR})
-SET(CPACK_PACKAGE_NAME ${PROJECT_NAME})
-SET(CPACK_PACKAGE_VERSION "0.0.1")
+INSTALL(DIRECTORY ${CMAKE_SOURCE_DIR}/third-party/include/
+    DESTINATION include/thirdparty
+    FILES_MATCHING PATTERN "*.h")
 
-SET(CPACK_MONOLITHIC_INSTALL 1)
+INSTALL(FILES ${CMAKE_SOURCE_DIR}/third-party/lib/glad/gl.c
+    DESTINATION lib)
 
+set(CPACK_PACKAGE_DIRECTORY ${CMAKE_SOURCE_DIR}/${OUT_DIR})
+
+# Packaging
 INCLUDE(CPack)
+
+SET(CPACK_PACKAGE_NAME ${PROJECT_NAME})
+
+set(CPACK_PACKAGE_DESCRIPTION "Eregion Game Engine")
+set(CPACK_PACKAGE_VENDOR "Eregion")
+
+# Get version
+INCLUDE(EregionVersion)
+SET(CPACK_PACKAGE_VERSION ${EREGION_VERSION_MAJOR}.${EREGION_VERSION_MINOR}.${EREGION_VERSION_PATCH})
+SET(CPACK_PACKAGE_VERSION_MAJOR ${EREGION_VERSION_MAJOR})
+SET(CPACK_PACKAGE_VERSION_MINOR ${EREGION_VERSION_MINOR})
+SET(CPACK_PACKAGE_VERSION_PATCH ${EREGION_VERSION_PATCH})
+
+SET(CPACK_PACKAGE_FILE_NAME ${PROJECT_NAME}-${EREGION_VERSION_MAJOR}.${EREGION_VERSION_MINOR}.${EREGION_VERSION_PATCH}-${EREGION_VERSION_SUFFIX})
+
+SET(CPACK_PACKAGE_LICENSE "APACHE")
+SET(CPACK_RESOURCE_FILE_LICENSE ${CMAKE_CURRENT_SOURCE_DIR}/LICENSE-APACHE.txt)
+
+SET(CPACK_GENERATOR "TGZ;ZIP")
