--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,10 @@ CMakeCache.txt
 cmake_install.cmake
 CPackConfig.cmake
 CPackSourceConfig.cmake
+liberegion.so
+
+#CPack
+install_manifest.txt
 
 # App
 libGLAD.a
